--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="text-content">
                 <h2 class="text-heading">New York</h2>
                 <div class="text-description">The atmosphere in New York is lorem ipsum.</div>
+                <img src="assets/img/slider/slider1.jpg"/>
             </div>
         </div>
 
@@ -86,7 +87,7 @@
                     <!-- Places  -->
                     <div class="row place-list">
                         <div class="col col-third">
-                            <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
+                            <img src="assets/img/places/place1.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="phace-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -96,7 +97,7 @@
                         </div>
 
                         <div class="col col-third">
-                            <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
+                            <img src="assets/img/places/place2.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="phace-heading">Paris</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
@@ -106,7 +107,7 @@
                         </div>
 
                         <div class="col col-third">
-                            <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
+                            <img src="assets/img/places/place3.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="phace-heading">San Francisco</h3>
                                 <p class="place-time">Sun 29 Nov 2016</p>
@@ -152,7 +153,7 @@
             <!--End: CONTACT section -->
 
             <div class="map-section">
-                <img src="/assets/img/map.jpg" alt="Map">
+                <img src="assets/img/map.jpg" alt="Map">
             </div>
         </div>
 
